--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,9 +19,11 @@ cache:
 test_async:
   script:
     - npm install
-    - node ./specs/start.js ./specs/async.spec.js
-
+    - npm start
+    - ^C
+    
 test_db:
   script:
     - npm install
-    - node ./specs/start.js ./specs/db-postgres.spec.js
+    - npm start
+    - ^C
