--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "AlvaroIribarren",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
     "morgan": "^1.10.0",
     "pg": "^8.0.2"
   },
