--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "morgan": "^1.10.0",
-    "pg": "^8.0.2"
+    "pg": "^8.0.3",
+    "sequelize-cli": "^5.5.1"
   },
   "engines": {
     "node": "12.16.2"
