--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,12 @@ build:
         - echo "Building"
         - mkdir build
         - touch build/info.txt
+    artifacts:
+        paths:
+            -build/
 test:
     stage: test
     script:
         - echo "Testing"
         - test -f "build/info.txt"
+        
