--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha || true"
   },
   "author": "AlvaroIribarren",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "mocha": "^7.1.2",
     "morgan": "^1.10.0",
     "pg": "^8.0.2"
   },
