--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "AlvaroIribarren",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "firebase-admin": "^8.11.0",
     "joi": "^14.3.1",
     "mocha": "^7.1.2",
     "morgan": "^1.10.0",
