--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha || true"
+    "test": " mocha \"test/**/*.js\"\n "
   },
   "author": "AlvaroIribarren",
   "license": "ISC",
