--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "ejs": "^3.0.2",
+    "elasticlunr": "^0.9.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.11.0",
     "joi": "^14.3.1",
