--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.11.0",
     "joi": "^14.3.1",
+    "lodash": "^4.17.15",
+    "madge": "^3.9.0",
     "mocha": "^7.1.2",
     "morgan": "^1.10.0",
     "pg": "^8.0.2"
