Borrado de video con requester id

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "madge": "^3.9.0",
     "mocha": "^7.1.2",
     "morgan": "^1.10.0",
+    "node-rules": "^5.0.0",
     "pg": "^8.0.2"
   },
   "engines": {
