--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^7.1.2",
     "morgan": "^1.10.0",
     "node-rules": "^5.0.0",
+    "nools": "^0.4.4",
     "pg": "^8.0.2"
   },
   "engines": {
