--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "ejs": "^3.0.2",
     "elasticlunr": "^0.9.5",
     "express": "^4.17.1",
