--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "node-rules": "^5.0.0",
     "nools": "^0.4.4",
-    "pg": "^8.0.2"
+    "pg": "^8.0.2",
+    "uuid": "^8.2.0"
   },
   "engines": {
     "node": "12.16.2"
