--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": " mocha \"test/**/*.js\"\n "
+    "test": " mocha \"test/**/*.js\"\n ",
+    "coverage": "nyc npm run test",
+    "coverage:report": "nyc report --reporter=lcov --reporter=text"
   },
   "author": "AlvaroIribarren",
   "license": "ISC",
@@ -25,6 +27,7 @@
     "morgan": "^1.10.0",
     "node-rules": "^5.0.0",
     "nools": "^0.4.4",
+    "nyc": "^15.1.0",
     "pg": "^8.0.2",
     "uuid": "^8.2.0"
   },
